--- a/ihrm_common/pom.xml
+++ b/ihrm_common/pom.xml
@@ -25,7 +25,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>com.ihrm</groupId>
+            <artifactId>ihrm_common_model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
