--- a/ihrm_system/src/main/resources/application.yml
+++ b/ihrm_system/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
   devtools:
     restart:
       enabled: true
+  redis:
+    host: 127.0.0.1
+    port: 6379
+
 
 # 当前企业
 company-id: 1
@@ -32,4 +36,6 @@ jwt:
 logging:
   level:
     com.ihrm.*: debug
+
+
 
