--- a/ihrm_system/src/main/resources/application.yml
+++ b/ihrm_system/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+#注册到eureka的服务地址
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:6868/eureka
 #服务配置
 server:
   port: 9002
