--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>ihrm_common_model</module>
         <module>ihrm_company</module>
         <module>ihrm_system</module>
+        <module>ihrm_eureka</module>
     </modules>
 
     <packaging>pom</packaging>
