--- a/ihrm_common/pom.xml
+++ b/ihrm_common/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>ihrm_common_model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+            <version>9.5.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
