feat 关闭eureka 同时去除了jwt相关的代码

--- a/ihrm_employee/src/main/resources/application.yml
+++ b/ihrm_employee/src/main/resources/application.yml
@@ -6,6 +6,8 @@ eureka:
 server:
   port: 9003
 spring:
+  autoconfigure:
+    exclude: org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration
   application:
     name: ihrm-employee #指定服务名
   datasource:
