--- a/ihrm_system/src/main/resources/application.yml
+++ b/ihrm_system/src/main/resources/application.yml
@@ -28,6 +28,8 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+  autoconfigure:
+    exclude: org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration
 
 
 # 当前企业
