--- a/ihrm_company/src/main/resources/application.yml
+++ b/ihrm_company/src/main/resources/application.yml
@@ -8,6 +8,8 @@ server:
   port: 9001
 #spring配置
 spring:
+  autoconfigure:
+    exclude: org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration
   #1.应用配置
   application:
     name: ihrm-company #指定服务名
