--- a/ihrm_employee/src/main/resources/application.yml
+++ b/ihrm_employee/src/main/resources/application.yml
@@ -2,12 +2,13 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:6868/eureka/
+      defaultZone: http://localhost:6868/eureka
+  instance:
+    perferIpAddress : true
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 server:
   port: 9003
 spring:
-  autoconfigure:
-    exclude: org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration
   application:
     name: ihrm-employee #指定服务名
   datasource:
