--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>ihrm_system</module>
         <module>ihrm_eureka</module>
         <module>ihrm_employee</module>
+        <module>ihrm_gate</module>
     </modules>
 
     <packaging>pom</packaging>
