--- a/ihrm_gate/src/main/resources/application.yml
+++ b/ihrm_gate/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+  autoconfigure:
+    exclude:
+    - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 
 #配置路由规则
