--- a/ihrm_gate/src/main/resources/application.yml
+++ b/ihrm_gate/src/main/resources/application.yml
@@ -53,7 +53,6 @@ zuul:
       sentiviteHeaders:   #将指定路由的敏感头设置为空
       customSensitiveHeaders: true #对指定路由开启自定义敏感头
 
-
 logging:
   level:
     com.ihrm.*: debug
@@ -61,4 +60,11 @@ logging:
 
 
 
-
+management:
+  endpoint:
+    routes:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: routes
