--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>ihrm_eureka</module>
         <module>ihrm_employee</module>
         <module>ihrm_gate</module>
+        <module>ihrm_social_securitys</module>
     </modules>
 
     <packaging>pom</packaging>
