--- a/ihrm_gate/src/main/resources/application.yml
+++ b/ihrm_gate/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
 
 #配置路由规则
 zuul:
+  host:
+    connect-timeout-millis: 15000  #HTTP连接超时要比Hystrix的大
+    socket-timeout-millis: 60000  #socket超时
   routes:
     #路由id
     ihrm-company:
@@ -68,3 +71,7 @@ management:
     web:
       exposure:
         include: routes
+
+ribbon:
+  ReadTimeout: 10000
+  ConnectTimeout : 10000
