feat 考勤模块 - 添加考勤模块,完成考勤信息的设置 - 考勤模块报表归档处理 - 考勤模块新建报表 - 查询考勤模块用户对应每月份的考勤明细

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>ihrm_employee</module>
         <module>ihrm_gate</module>
         <module>ihrm_social_securitys</module>
+        <module>ihrm_attendance</module>
     </modules>
 
     <packaging>pom</packaging>
