--- a/ihrm_attendance/src/main/resources/application.yml
+++ b/ihrm_attendance/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:6868/eureka/
+      defaultZone: http://127.0.0.1:6868/eureka
   instance:
-    preferIpAddress : true
+    preferIpAddress: true
     instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 #服务配置
 server:
