--- a/ihrm_employee/src/main/resources/application.yml
+++ b/ihrm_employee/src/main/resources/application.yml
@@ -4,7 +4,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:6868/eureka
   instance:
-    perferIpAddress : true
+    preferIpAddress : true
     instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 server:
   port: 9003
