--- a/ihrm_social_securitys/src/main/resources/application.yml
+++ b/ihrm_social_securitys/src/main/resources/application.yml
@@ -2,9 +2,9 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:6868/eureka/
+      defaultZone: http://localhost:6868/eureka
   instance:
-    perferIpAddress: true
+    preferIpAddress: true
     instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 server:
   port: 9005
