fixed 前端options请求发生302重定向和cors跨域错误 这是shiro先拦截了所有请求，然后才到Zuul导致的。 所以我们要放开Shiro对OPTIONS请求的拦截。 参考：https://blog.csdn.net/qq_29296005/article/details/88664464
也可以让shiro全部放行，让zuul来处理。具体代码在FirstFilter中
参考：https://segmentfault.com/a/1190000015870281

当然了，也可以把这些都去掉——只要基于nginx配置反向代理，这样做无跨域和options问题。
这个就只需要在前端项目中配置BASE_API: '"api"'，然后配置nginx反向代理就行，因为页面来源和页面请求的都是nginx，所以没有跨域问题。
参考：配置反向代理https://lvxueyang.vip/post/65b69107.html

--- a/ihrm_gate/src/main/resources/application.yml
+++ b/ihrm_gate/src/main/resources/application.yml
@@ -79,10 +79,13 @@ zuul:
       stripPrefix: false
       sentiviteHeaders:   #将指定路由的敏感头设置为空
       customSensitiveHeaders: true #对指定路由开启自定义敏感头
+  include-debug-header: true
+debug: true
+
 logging:
   level:
     com.ihrm.*: debug
-    com.netflix: DEBUG
+#    com.netflix: debug
 
 
 hystrix:
@@ -110,4 +113,3 @@ management:
     web:
       exposure:
         include: routes
-
