--- a/pom.xml
+++ b/pom.xml
@@ -188,18 +188,9 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+    <!--指定使用maven 打包-->
     <build>
         <plugins>
-            <plugin>
-                <!--热部署配置-->
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <!--fork:如果没有该项配置,整个devtools不会起作用-->
-                    <fork>true</fork>
-                </configuration>
-            </plugin>
-            <!--编译插件-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -209,14 +200,12 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
-
-            <!--单元测试插件-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
+                <version>2.19.1</version>
                 <configuration>
-                    <skipTests>true</skipTests>
+                    <skipTests>true</skipTests>    <!--默认关掉单元测试 -->
                 </configuration>
             </plugin>
         </plugins>
