--- a/ihrm_gate/Dockerfile
+++ b/ihrm_gate/Dockerfile
@@ -1,6 +1,6 @@
 FROM java:8
 EXPOSE 9001
 # 将本地的jar包放到容器的根目录中，linux中 '/'代表的就是根目录
-ADD target/ihrm_attendance-1.0-SNAPSHOT.jar /ihrm_gate.jar
+ADD target/ihrm_gate-1.0-SNAPSHOT.jar /ihrm_gate.jar
 # VOLUME /data/logs
-ENTRYPOINT ["java", "-Xmx64m -Xms16m -Xmn8m -Xss8m","-Dspring.profiles.active=pro", "-jar", "/ihrm_attendance.jar"]
+ENTRYPOINT ["java", "-Xmx64m", "-Xms16m", "-Xmn8m", "-Xss8m", "-jar", "/ihrm_gate.jar", "-Dspring.profiles.active=pro"]
