--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,15 @@ services:
     image: redis:latest
     ports:
     - 6375:3306
+
+  ihrm_eureka:
+    image: ihrm_eureka
+    build: ./ihrm_eureka
+    ports:
+      - 6868:6868
+    environment:
+      - spring.profiles.active=prod
+
   ihrm_gate:
     image: ihrm-gate
     build: ./ihrm_gate
@@ -19,6 +28,43 @@ services:
       - 9001:9001
     environment:
       - spring.profiles.active=prod
+  ihrm_company:
+    image: ihrm_company
+    build: ./ihrm_company
+    ports:
+      - 9002:9002
+    environment:
+      - spring.profiles.active=prod
+  ihrm_employee:
+    image: ihrm_employee
+    build: ./ihrm_employee
+    ports:
+      - 9003:9003
+    environment:
+      - spring.profiles.active=prod
+
+  ihrm_system:
+    image: ihrm_system
+    build: ./ihrm_system
+    ports:
+      - 9004:9004
+    environment:
+      - spring.profiles.active=prod
+  ihrm_social_securitys:
+    image: ihrm_social_securitys
+    build: ./ihrm_social_securitys
+    ports:
+      - 9005:9005
+    environment:
+      - spring.profiles.active=prod
+  ihrm_attendance:
+    image: ihrm_attendance
+    build: ./ihrm_attendance
+    ports:
+      - 9006:9006
+    environment:
+      - spring.profiles.active=prod
+
   ihrm_audit:
     image: ihrm_audit
     build: ./ihrm_audit
@@ -26,3 +72,7 @@ services:
       - 9009:9009
     environment:
       - spring.profiles.active=prod
+
+
+
+
