--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,22 +1,19 @@
 FROM mysql:8.0.20
 
-# 参考：https://blog.csdn.net/weixin_38187317/article/details/81477424
-# mysql的工作位置
-ENV WORK_PATH /usr/local/
+# 参考：https://www.yuque.com/lazypg/docker/e4f4788850fd1c9f0e7fb1e588a5309e
+# Dockerfile 搭建mysql并初始化db
 
-# 初始化数据库的SQL
+# 定义会被容器自动执行的目录
+ENV AUTO_RUN_DIR /docker-entrypoint-initdb.d
+
+# 定义初始化sql文件
 ENV FILE_0 act.sql
 ENV FILE_1 ihrm.sql
-# 执行SQL
-ENV INSTALL_DATA_SHELL docker-entrypoint.sh
 
-COPY ./$FILE_0 $WORK_PATH/
-COPY ./$FILE_1 $WORK_PATH/
-#把要执行的shell文件放到/docker-entrypoint-initdb.d/目录下，容器会自动执行这个shell
-COPY ./$INSTALL_DATA_SHELL $AUTO_RUN_DIR/
+# 把要执行的sql文件放到/docker-entrypoint-initdb.d/目录下，容器会自动执行这个sql
+COPY ./$FILE_0 $AUTO_RUN_DIR/
+COPY ./$FILE_1 $AUTO_RUN_DIR/
 
 #给执行文件增加可执行权限
-RUN chmod a+x $AUTO_RUN_DIR/$INSTALL_DATA_SHELL
-
-# 设置容器启动时执行的命令
-#CMD ["sh", "/docker-entrypoint-initdb.d/import.sh"]
+RUN chmod a+x $AUTO_RUN_DIR/$FILE_0
+RUN chmod a+x $AUTO_RUN_DIR/$FILE_1
