--- a/ihrm_system/pom.xml
+++ b/ihrm_system/pom.xml
@@ -47,15 +47,10 @@
     </dependencies>
     <build>
         <plugins>
-            <!--热部署配置-->
-            <!--<plugin>-->
-            <!--    <groupId>org.springframework.boot</groupId>-->
-            <!--    <artifactId>spring-boot-maven-plugin</artifactId>-->
-            <!--    <configuration>-->
-            <!--        &lt;!&ndash;fork:如果没有该项配置,整个devtools不会起作用&ndash;&gt;-->
-            <!--        <fork>true</fork>-->
-            <!--    </configuration>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
