fixed host name may not be null apache的域名是不支持含有下划线的，主要跟DNS的严格规范有关。 以后服务名和文件都绝对不许用下划线
rebase之前的失败尝试：

fixed maven报错

fixed & updated eureka的defaultZone和其他不一样
yml重新编排
解决social的java heap out

fixed eureka连不上 java.lang.IllegalArgumentException: Host name may not be nul

fixed dockercompose

fixed 多个docker-compose的service之间无法直接互联，需要手动写links到container

tested 还是连不上eureka

tested 还是连不上eureka

tested 还是连不上eureka

tested 还是连不上eureka

tested 还是连不上eureka

tested 还是连不上eureka

tested 还是连不上eureka

fixed

fixed

fixed

fixed

fixed

--- a/docker-compose-2.yml
+++ b/docker-compose-2.yml
@@ -1,25 +1,33 @@
 version: '3'
 
 services:
-  ihrm_gate:
+  ihrm-eureka:
+    image: ihrm-eureka
+    build: ./ihrm_eureka
+    ports:
+      - "6868:6868"
+    environment:
+      - spring.profiles.active=prod
+    hostname: ihrm-eureka
+
+  ihrm-gate:
     image: ihrm-gate
     build: ./ihrm_gate
     ports:
-      - 9001:9001
+      - "9001:9001"
     environment:
       - spring.profiles.active=prod
-  ihrm_company:
-    image: ihrm_company
-    build: ./ihrm_company
+    depends_on:
+      - ihrm-eureka
+    hostname: ihrm-gate
+
+  ihrm-system:
+    image: ihrm-system
+    build: ./ihrm_system
     ports:
-      - 9002:9002
+      - 9004:9004
     environment:
       - spring.profiles.active=prod
-  ihrm_employee:
-    image: ihrm_employee
-    build: ./ihrm_employee
-    ports:
-      - 9003:9003
-    environment:
-      - spring.profiles.active=prod
+
+
 
