--- a/ihrm_gate/src/main/resources/application-prod.yml
+++ b/ihrm_gate/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://ihrm_eureka:6868/eureka
+      defaultZone: http://ihrm-eureka:6868/eureka/
 spring:
   redis:
     host: redis
