--- a/docker-compose-4.yml
+++ b/docker-compose-4.yml
@@ -1,16 +1,16 @@
 version: '3'
 
 services:
-  ihrm_attendance:
-    image: ihrm_attendance
+  ihrm-attendance:
+    image: ihrm-attendance
     build: ./ihrm_attendance
     ports:
       - 9006:9006
     environment:
       - spring.profiles.active=prod
 
-  ihrm_audit:
-    image: ihrm_audit
+  ihrm-audit:
+    image: ihrm-audit
     build: ./ihrm_audit
     ports:
       - 9009:9009
