--- a/ihrm_attendance/src/main/resources/application-prod.yml
+++ b/ihrm_attendance/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://ihrm_eureka:6868/eureka
+      defaultZone: http://ihrm-eureka:6868/eureka/
 spring:
   datasource:
     url: jdbc:mysql://mysql:3306/ihrm?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
