--- a/ihrm_eureka/src/main/resources/application-prod.yml
+++ b/ihrm_eureka/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://ihrm_eureka:6868/eureka/
+      defaultZone: http://ihrm-eureka:6868/eureka/
 
 
