--- a/ihrm_employee/src/main/resources/application.yml
+++ b/ihrm_employee/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:6868/eureka
+      defaultZone: http://localhost:6868/eureka/
   instance:
     preferIpAddress : true
     instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
