feat 增加本地执行脚本，配置jvm，降低内存消耗。 增加sql运行脚本可以自动执行sql函数，为mysql设定远程访问账号，密码参考Dockerfile？或者可能在docker-compose里面

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -17,3 +17,14 @@ COPY ./$FILE_1 $AUTO_RUN_DIR/
 #给执行文件增加可执行权限
 RUN chmod a+x $AUTO_RUN_DIR/$FILE_0
 RUN chmod a+x $AUTO_RUN_DIR/$FILE_1
+
+# 设置免密登录
+ENV MYSQL_ALLOW_EMPTY_PASSWORD yes
+# 将所需文件放到容器中
+COPY setup.sh /mysql/setup.sh
+#COPY schema.sql /mysql/schema.sql
+COPY privileges.sql /mysql/privileges.sql
+
+
+# 设置容器启动时执行的命令
+CMD ["sh", "/mysql/setup.sh"]
