--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -21,9 +21,9 @@ RUN chmod a+x $AUTO_RUN_DIR/$FILE_1
 # 设置免密登录
 ENV MYSQL_ALLOW_EMPTY_PASSWORD yes
 # 将所需文件放到容器中
-COPY setup.sh /mysql/setup.sh
-#COPY schema.sql /mysql/schema.sql
-COPY privileges.sql /mysql/privileges.sql
+COPY setup.sh setup.sh
+#COPY schema.sql schema.sql
+COPY privileges.sql privileges.sql
 
 
 # 设置容器启动时执行的命令
