--- a/ihrm_attendance/src/main/resources/application-local.yml
+++ b/ihrm_attendance/src/main/resources/application-local.yml
@@ -8,4 +8,12 @@ spring:
   redis:
     host: localhost
     port: 6379
-
+  #3.JPA
+  jpa:
+    database: MySQL
+    show-sql: false
+    open-in-view: false
+logging:
+  level:
+    root: warn
+#    root: debug
