--- a/ihrm_gate/src/main/resources/application-local.yml
+++ b/ihrm_gate/src/main/resources/application-local.yml
@@ -6,4 +6,13 @@ spring:
   redis:
     host: localhost
     port: 6379
+  #3.JPA
+  jpa:
+    database: MySQL
+    show-sql: false
+    open-in-view: false
 
+logging:
+  level:
+    root: warn
+#    root: debug
