--- a/ihrm_salarys/src/main/resources/application-local.yml
+++ b/ihrm_salarys/src/main/resources/application-local.yml
@@ -9,4 +9,13 @@ spring:
   redis:
     host: localhost
     port: 6379
+  #3.JPA
+  jpa:
+    database: MySQL
+    show-sql: false
+    open-in-view: false
 
+logging:
+  level:
+    root: warn
+#    root: debug
