--- a/ihrm_system/src/main/resources/application-local.yml
+++ b/ihrm_system/src/main/resources/application-local.yml
@@ -11,7 +11,18 @@ spring:
   redis:
     host: localhost
     port: 6379
+  #3.JPA
+  jpa:
+    database: MySQL
+    show-sql: false
+    open-in-view: false
+  #3.JPA
+  jpa:
+    database: MySQL
+    show-sql: false
+    open-in-view: false
 
 logging:
   level:
-    root: info
+    root: warn
+#    root: debug
